syntax = "proto2";

package dharma.common;

message Header {
  // Message publishing time in seconds.
  optional double timestamp_sec = 1;

  // Module name.
  optional string module_name = 2;

  // Sequence number for each message. Each module maintains its own counter for
  // sequence_num, always starting from 1 on boot.
  optional uint32 sequence_num = 3;

}
