syntax = "proto2";

package dharma.planning;

import "modules/common/proto/header.proto";
import "modules/common/proto/pnc_point.proto";

message ADCTrajectory {
  optional dharma.common.Header header = 1;

  optional double total_path_length = 2;  // in meters
  optional double total_path_time = 3;    // in seconds

  // path data + speed data
  repeated dharma.common.TrajectoryPoint trajectory_point = 12;

//  // path point without speed info
//  repeated dharma.common.PathPoint path_point = 13;

}
